# dydisnix

./: Makefile.am  README.md  configure.ac  release.nix
css/: Makefile.am  style.css
data/: Makefile.am  augment-infra.nix  augument-infra.nix  distribution.xsl  distribution_expr.xsl  docs.xsl  extfilters.nix.in  filters.nix  gendist.nix  generate-mapping.xsl  intfilters.nix  ports.xsl  services.xsl  toXML.nix  try-build.nix.in
doc/: dydisnix.dia
nix/: Makefile.am  extfilters.nix  extfilters.nix.in  filters.nix  gendist.nix  toXML.nix  try-build.nix  try-build.nix.in
scripts/: Makefile.am  dydisnix-augment-infra.in  dydisnix-augument-infra.in  dydisnix-env.in  dydisnix-gendist.in  dydisnix-generate-services-docs.in  dydisnix-self-adapt.in  dydisnix-xml.in
src/: Makefile.am  dydisnix.pc.in
src/divide/: Makefile.am  divide.c  divide.h  main.c
src/document-services/: Makefile.am  docs-config.c  docs-config.h  document-services.c  document-services.h  main.c
src/filter-buildable/: Makefile.am  filterbuildable.c  filterbuildable.h  main.c
src/graphcol/: Makefile.am  graphcol-approximate.c  graphcol-approximate.h  graphcol.c  graphcol.h  main.c  partialcoloredgraph-transform.c  partialcoloredgraph-transform.h  partialcoloredgraph.c  partialcoloredgraph.h
src/idassign/: Makefile.am  assigndistribution.c  assigndistribution.h  assignservices.c  assignservices.h  boundaries.c  boundaries.h  idassign.c  idassign.h  idassignmentsperresourcetable.c  idassignmentsperresourcetable.h  idassignmentstable.c  idassignmentstable.h  idresourcestable.c  idresourcestable.h  idresourcetype.c  idresourcetype.h  idsconfig.c  idsconfig.h  idtoservicetable.c  idtoservicetable.h  lastassignmentspertargettable.c  lastassignmentspertargettable.h  lastassignmentstable.c  lastassignmentstable.h  main.c
src/libdistribution/: Makefile.am  distributionmapping.c  distributionmapping.h  distributionmappingarray.c  distributionmappingarray.h  distributiontable.c  distributiontable.h  targettoservicestable.c  targettoservicestable.h
src/libdymain/: Makefile.am  checkoptions.c  checkoptions.h
src/libgraph/: Makefile.am  node.c  node.h
src/libinfproperties/: Makefile.am  infrastructureproperties.c  infrastructureproperties.h  targetstable2.c  targetstable2.h
src/libinfrastructure2/: Makefile.am  targetstable2.c  targetstable2.h
src/libinvmapping/: Makefile.am  targetmapping.c  targetmapping.h  targetmappingtable.c  targetmappingtable.h
src/libmapping/: Makefile.am  candidatetargetmapping.c  candidatetargetmapping.h  candidatetargetmappingtable.c  candidatetargetmappingtable.h  candidatetargetsarray.c  candidatetargetsarray.h
src/libservices/: Makefile.am  service.c  service.h  servicegroup.c  servicegroup.h  serviceproperties.c  serviceproperties.h  servicestable.c  servicestable.h
src/minsetcover/: Makefile.am  main.c  minsetcover.c  minsetcover.h
src/multiwaycut/: Makefile.am  applicationhostgraph-transform.c  applicationhostgraph-transform.h  applicationhostgraph.c  applicationhostgraph.h  main.c  multiwaycut-approximate.c  multiwaycut-approximate.h  multiwaycut.c  multiwaycut.h  node.c  node.h  targetmapping.c
src/portassign/: Makefile.am  main.c  portassign.c  portassign.h  portconfiguration.c  portconfiguration.h  portdistribution.c  portdistribution.h  targetconfig.c  targetconfig.h
src/previous-distribution/: Makefile.am  generate-previous-distribution.c  generate-previous-distribution.h  main.c
src/visualize-infra/: Makefile.am  main.c  visualize-infra.c  visualize-infra.h
src/visualize-services/: Makefile.am  main.c  visualize-services.c  visualize-services.h
tests/: augment-infra.nix  augment.nix  default.nix  deployment.nix  distribution3.nix  docs.nix  gendist.nix  idassign.nix  infrastructure-3.nix  infrastructure.nix  machine.nix  portassign.nix  services-error.nix  services-privateports.nix  services-sharedports.nix  services-sharedports2.nix  services-sharedports3.nix  services-sharedprivateport.nix  services.nix
tests/models/: augment.nix  distribution2.nix  idresources-differentresource.nix  idresources-global-different-boundaries.nix  idresources-global-small.nix  idresources-global.nix  idresources-machine.nix  infrastructure-undercapacity.nix  services-sharedports2.nix  services-with-ids.nix  services-with-ids2.nix  services.nix
tests/models/pkgs/: default.nix
tests/models/qos/: customfilters.nix  qos-clear.nix  qos-greedy.nix  qos-highest-bidder.nix  qos-lowest-bidder.nix  qos-maplistonattr.nix  qos-minsetcover2.nix  qos-multiwaycut.nix  qos-order.nix
tests/pkgs/: default.nix  testService1B.nix
tests/qos/: qos-firsttargets.nix  qos-graphcol.nix  qos-greedy.nix  qos-highest-bidder.nix  qos-lowest-bidder.nix  qos-mapattronattr.nix  qos-mapattronlist.nix  qos-mapboundservicestoprevious.nix  qos-maplistonattr.nix  qos-mapstatefultoprevious.nix  qos-minsetcover.nix  qos-minsetcover2.nix  qos-multiwaycut.nix  qos-order.nix  qos-roundrobin.nix
tests/visualize/: docs.nix  infrastructure.nix  services.nix
xsl/: Makefile.am  distribution.xsl  idresources.xsl  ids.xsl
