pkgdata_DATA = distribution_expr.xsl distribution.xsl filters.nix intfilters.nix extfilters.nix services.xsl gendist.nix try-build.nix augument-infra.nix
EXTRA_DIST = distribution_expr.xsl distribution.xsl filters.nix intfilters.nix extfilters.nix.in services.xsl gendist.nix try-build.nix.in augument-infra.nix
