pkgdata_DATA = distribution_expr.xsl distribution.xsl filters.nix intfilters.nix extfilters.nix services.xsl gendist.nix try-build.nix augment-infra.nix generate-mapping.xsl toXML.nix ports.xsl style.css docs.xsl
EXTRA_DIST = distribution_expr.xsl distribution.xsl filters.nix intfilters.nix extfilters.nix.in services.xsl gendist.nix try-build.nix.in augment-infra.nix generate-mapping.xsl toXML.nix ports.xsl style.css docs.xsl
