SUBDIRS = libservices \
	libinfproperties \
	libdistribution \
	libgraph \
	libdymain \
	filter-buildable \
	divide \
	multiwaycut \
	minsetcover \
	graphcol \
	portassign \
	visualize-services \
	document-services \
	previous-distribution

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = dydisnix.pc
