bin_PROGRAMS = dydisnix-visualize-services
noinst_HEADERS = visualize-services.h

dydisnix_visualize_services_SOURCES = visualize-services.c main.c
dydisnix_visualize_services_LDADD = ../libservices/libservices.la
dydisnix_visualize_services_CFLAGS = -I../libservices $(GLIB_CFLAGS) $(DISNIX_CFLAGS) $(LIBXML2_CFLAGS)
